--- a/css/style.css
+++ b/css/style.css
@@ -762,14 +762,15 @@ hr {
   background: #c1c7d0;
 }
 
-.displayErrorMessage#display-error {
+.displayErrorMessage {
   color: #fff;
-  font-size: 12px;
+  font-size: 13px;
   background-color: red;
+  display: none;
 }
 
 #display-error {
-  visibility: hidden;
+  display: none;
   width: 100%;
   height: 20px;
   position: absolute;
@@ -777,6 +778,7 @@ hr {
   text-align: center;
   padding: 15px;
   transition: visibility 30s ease-in-out;
+  background-color: red;
 }
 
 /* stylelint-disable-next-line comment-empty-line-before */
@@ -1302,7 +1304,9 @@ hr {
     height: 20px;
     position: absolute;
     top: 53%;
+    text-align: center;
     padding: 15px;
     transition: visibility 30s ease-in-out;
+    background-color: red;
   }
 }
