--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,7 @@ body {
   min-width: 375px;
   margin-left: 20px;
   margin-right: 20px;
-  overflow: auto;
-  overflow-x: auto;
+  overflow: hidden;
 }
 
 h1 {
