--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {
 .container {
   width: 90%;
   margin: auto;
-  overflow: hidden;
 }
 
 h1 {
@@ -34,6 +33,8 @@ h1 {
 }
 
 nav {
+  margin-left: 0;
+  padding-left: 0;
   display: flex;
   justify-content: space-between;
   align-items: baseline;
@@ -160,13 +161,10 @@ nav .nav-right {
   flex-direction: column;
   padding-left: 2%;
   padding-right: 2%;
-  min-width: 375px;
-  margin-left: 20px;
-  margin-right: 20px;
 }
 
 .home-content .primary {
-  min-width: 327px;
+  width: 100%;
 }
 
 .frameworks h2,
@@ -194,7 +192,7 @@ nav .nav-right {
 }
 
 .home-content .primary h1 {
-  font-size: 40px;
+  font-size: 35px;
   font-weight: 700;
   line-height: 1.3em;
   color: #172b4d;
