--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
 body {
   font-family: "Poppins", sans-serif;
   font-family: "Inter", sans-serif;
-  overflow-x: auto;
 }
 
 .container {
@@ -25,7 +24,9 @@ h1 {
 .nav-flex {
   text-align: center;
   margin: 0;
-  width: 100%;
+  padding-right: 2%;
+  padding-left: 2%;
+  min-width: 375px;
 }
 
 .nav-middle ul {
@@ -1041,7 +1042,7 @@ hr {
   .contact-container {
     width: 100%;
     height: 100vh;
-    background-image: url("../images/Frame.svg");
+    /* background-image: url("../images/Frame.svg"); */
     background-repeat: no-repeat;
     background-size: contain;
     background-position: bottom 60px right 0;
@@ -1108,6 +1109,7 @@ hr {
   }
 
   .contact-form {
+    width: 100%;
     background: url("../images/bg1\ for\ contact.svg");
     background-repeat: no-repeat;
     background-position: bottom 80px left 1px;
