--- a/css/style.css
+++ b/css/style.css
@@ -982,7 +982,8 @@ hr {
   }
 
   .contact-form .form-flex {
-    margin: 0 80px;
+    /* margin: 0 80px; */
+
     display: grid;
     width: 100%;
     height: 490px;
@@ -991,6 +992,7 @@ hr {
     background-image: url("../images/bg\ 2\ for\ contact.svg");
     background-repeat: no-repeat;
     background-position: bottom 0 left 200px;
+    padding-right: 0;
   }
 
   .contact-form .contact-me {
@@ -1041,9 +1043,8 @@ hr {
 
   .contact-container {
     width: 100%;
-    height: 100vh;
-
-    /* background-image: url("../images/Frame.svg"); */
+    margin-top: 25px;
+    background-image: url("../images/Frame.svg");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: bottom 60px right 0;
