--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ nav .nav-left {
 
 .social-icons li:hover {
   transform: translateY(-10px);
+  color: #008552;
 }
 
 .popup-mobile-technology ul li:first-child {
@@ -243,6 +244,7 @@ nav .nav-right {
 
 .social-icons ul li a {
   transition: 0.2s ease-in-out;
+  color: #008552;
 }
 
 .my-recent-works img {
@@ -252,6 +254,7 @@ nav .nav-right {
 
 .social-icons li a:hover {
   transform: translateY(-10px);
+  color: #008552;
 }
 
 .languages img,
@@ -1141,7 +1144,7 @@ hr {
     height: 3px;
     position: absolute;
     left: 0;
-    bottom: -2px;
+    bottom: 2px;
     transition: 0.5s;
   }
 
@@ -1149,6 +1152,15 @@ hr {
   .nav-middle ul li {
     padding-bottom: 0;
     margin-bottom: 0;
+  }
+
+  .nav-middle ul li a {
+    padding-bottom: 4px;
+    margin-bottom: 2px;
+    margin-left: 0;
+    padding-left: 0;
+    padding-right: 0;
+    margin-right: 0;
   }
 
   .nav-middle ul li:hover::after {
